# hobbit_sim

./: .gitignore  CLAUDE.md  DEVELOPMENT_APPROACH.md  FEATURES.md  INIT.md  NEXT_SESSION.md  README.md  REFACTORING.md  TODO.md  hobbit-sim-context.md  hobbit_sim.py  pyproject.toml  test_hobbit_sim.py
.claude/agents/: mypy-error-fixer.md  pytest-runner.md  ruff-fixer.md  style-guide-fixer.md
docs/: DEVELOPMENT_APPROACH.md  FEATURES.md  IDEAS.md  NEXT_SESSION.md  REFACTORING.md  TESTS.md  hobbit-sim-bombadil-design.md
examples/: example_run_2025-11-15.txt
